@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src/java"/>
+	<classpathentry kind="src" path="src/test/unit"/>
 	<classpathentry kind="src" path="src/test/hdfs"/>
 	<classpathentry kind="src" path="src/test/hdfs-with-mr"/>
 	<classpathentry kind="src" path="src/ant"/>
