@@ -181,7 +181,7 @@ public class NameNode implements ClientProtocol, DatanodeProtocol,
     return namesystem;
   }
 
-  private static void initMetrics(Configuration conf, NamenodeRole role) {
+  static void initMetrics(Configuration conf, NamenodeRole role) {
     myMetrics = new NameNodeMetrics(conf, role);
   }
 
